// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decomposePrivateKey should decompose with a single format 1`] = `
Object {
  "encryptionAlgorithm": null,
  "format": "pkcs1-pem",
  "keyAlgorithm": Object {
    "id": "rsa-encryption",
  },
  "keyData": Object {
    "coefficient": Uint8Array [
      0,
      170,
      199,
      104,
      188,
      117,
      173,
      52,
      144,
      63,
      144,
      98,
      53,
      2,
      58,
      228,
      64,
      250,
      103,
      240,
      144,
      105,
      3,
      40,
      135,
      158,
      150,
      207,
      159,
      216,
      27,
      64,
      148,
      71,
      251,
      10,
      164,
      132,
      106,
      130,
      233,
      255,
      95,
      101,
      223,
      109,
      213,
      181,
      75,
      114,
      230,
      248,
      74,
      208,
      107,
      43,
      58,
      54,
      247,
      89,
      39,
      130,
      137,
      39,
      251,
      51,
      254,
      191,
      65,
      164,
      42,
      69,
      123,
      25,
      155,
      77,
      151,
      109,
      147,
      91,
      42,
      12,
      20,
      17,
      100,
      140,
      172,
      33,
      197,
      112,
      249,
      35,
      164,
      47,
      139,
      9,
      222,
      101,
      255,
      165,
      3,
      240,
      84,
      113,
      151,
      170,
      173,
      154,
      44,
      194,
      239,
      28,
      167,
      112,
      120,
      223,
      169,
      103,
      60,
      179,
      209,
      83,
      77,
      226,
      120,
      233,
      124,
      170,
      132,
    ],
    "exponent1": Uint8Array [
      0,
      193,
      179,
      115,
      178,
      210,
      57,
      129,
      167,
      176,
      187,
      133,
      3,
      34,
      13,
      135,
      186,
      221,
      227,
      99,
      222,
      75,
      221,
      198,
      216,
      66,
      213,
      109,
      212,
      217,
      37,
      45,
      89,
      152,
      117,
      225,
      107,
      150,
      117,
      182,
      67,
      47,
      33,
      252,
      209,
      95,
      219,
      158,
      108,
      157,
      40,
      101,
      73,
      100,
      2,
      229,
      183,
      198,
      103,
      109,
      220,
      220,
      132,
      46,
      229,
      208,
      9,
      100,
      57,
      170,
      9,
      219,
      131,
      103,
      109,
      255,
      167,
      169,
      139,
      219,
      42,
      114,
      234,
      177,
      152,
      163,
      68,
      183,
      59,
      204,
      112,
      134,
      163,
      6,
      60,
      224,
      171,
      71,
      33,
      224,
      74,
      181,
      223,
      20,
      94,
      234,
      25,
      251,
      31,
      25,
      90,
      142,
      19,
      128,
      190,
      16,
      52,
      65,
      98,
      113,
      70,
      86,
      32,
      70,
      63,
      132,
      117,
      128,
      241,
    ],
    "exponent2": Uint8Array [
      0,
      180,
      120,
      105,
      246,
      141,
      188,
      114,
      57,
      198,
      117,
      209,
      39,
      16,
      66,
      152,
      233,
      94,
      177,
      91,
      21,
      0,
      120,
      223,
      43,
      162,
      64,
      238,
      99,
      110,
      64,
      241,
      111,
      177,
      33,
      204,
      110,
      122,
      180,
      143,
      136,
      97,
      200,
      152,
      120,
      86,
      0,
      143,
      63,
      151,
      9,
      17,
      238,
      53,
      34,
      5,
      116,
      146,
      251,
      39,
      151,
      159,
      222,
      164,
      207,
      125,
      97,
      190,
      63,
      207,
      207,
      158,
      74,
      49,
      164,
      182,
      65,
      35,
      111,
      237,
      136,
      108,
      146,
      170,
      80,
      236,
      126,
      48,
      86,
      102,
      198,
      61,
      0,
      253,
      148,
      129,
      210,
      71,
      203,
      190,
      42,
      29,
      199,
      131,
      220,
      17,
      20,
      125,
      248,
      102,
      54,
      240,
      40,
      102,
      152,
      30,
      177,
      179,
      68,
      150,
      218,
      92,
      8,
      14,
      18,
      22,
      14,
      117,
      93,
    ],
    "modulus": Uint8Array [
      0,
      194,
      250,
      205,
      58,
      165,
      170,
      198,
      108,
      132,
      70,
      32,
      244,
      220,
      102,
      212,
      211,
      182,
      102,
      221,
      92,
      143,
      254,
      142,
      94,
      186,
      81,
      219,
      104,
      151,
      186,
      173,
      29,
      22,
      70,
      21,
      137,
      53,
      53,
      141,
      124,
      65,
      10,
      223,
      190,
      189,
      25,
      187,
      176,
      101,
      6,
      210,
      129,
      138,
      77,
      98,
      25,
      225,
      174,
      183,
      168,
      232,
      197,
      161,
      202,
      150,
      35,
      171,
      18,
      93,
      82,
      88,
      16,
      94,
      8,
      109,
      36,
      97,
      144,
      76,
      144,
      35,
      110,
      7,
      208,
      182,
      231,
      53,
      185,
      253,
      18,
      105,
      168,
      168,
      251,
      231,
      89,
      97,
      38,
      41,
      133,
      249,
      175,
      189,
      168,
      171,
      109,
      133,
      7,
      164,
      155,
      206,
      231,
      47,
      196,
      197,
      85,
      217,
      74,
      220,
      155,
      98,
      44,
      163,
      97,
      64,
      136,
      10,
      216,
      240,
      175,
      248,
      31,
      186,
      255,
      190,
      81,
      225,
      48,
      142,
      10,
      74,
      22,
      18,
      19,
      191,
      108,
      134,
      53,
      70,
      76,
      26,
      145,
      229,
      233,
      93,
      65,
      117,
      88,
      211,
      232,
      42,
      102,
      96,
      227,
      136,
      29,
      135,
      235,
      68,
      115,
      204,
      50,
      43,
      22,
      3,
      206,
      227,
      208,
      250,
      58,
      245,
      1,
      132,
      91,
      216,
      149,
      12,
      84,
      168,
      165,
      211,
      115,
      126,
      167,
      205,
      177,
      196,
      6,
      139,
      25,
      136,
      50,
      251,
      151,
      76,
      246,
      77,
      51,
      110,
      225,
      16,
      87,
      247,
      49,
      206,
      220,
      7,
      203,
      110,
      34,
      88,
      243,
      85,
      107,
      63,
      44,
      252,
      92,
      47,
      20,
      32,
      113,
      212,
      147,
      227,
      192,
      116,
      137,
      248,
      241,
      77,
      242,
      17,
      42,
      157,
      240,
      162,
      210,
      82,
      80,
      233,
      1,
      97,
      59,
      85,
      121,
    ],
    "prime1": Uint8Array [
      0,
      234,
      197,
      149,
      114,
      192,
      177,
      89,
      226,
      81,
      36,
      244,
      171,
      58,
      249,
      165,
      54,
      232,
      120,
      154,
      138,
      43,
      21,
      105,
      150,
      95,
      150,
      45,
      224,
      191,
      120,
      73,
      4,
      156,
      69,
      130,
      163,
      168,
      189,
      189,
      136,
      106,
      58,
      40,
      80,
      188,
      19,
      59,
      138,
      144,
      181,
      53,
      37,
      206,
      74,
      52,
      197,
      235,
      42,
      44,
      240,
      201,
      12,
      54,
      72,
      241,
      106,
      8,
      147,
      6,
      48,
      187,
      236,
      197,
      241,
      144,
      172,
      77,
      14,
      38,
      92,
      26,
      156,
      230,
      192,
      187,
      178,
      181,
      70,
      51,
      87,
      120,
      11,
      69,
      167,
      6,
      131,
      235,
      78,
      121,
      163,
      195,
      191,
      169,
      7,
      77,
      127,
      82,
      243,
      201,
      148,
      178,
      59,
      136,
      217,
      240,
      142,
      204,
      65,
      137,
      125,
      209,
      191,
      94,
      11,
      47,
      162,
      24,
      51,
    ],
    "prime2": Uint8Array [
      0,
      212,
      156,
      31,
      177,
      83,
      95,
      21,
      57,
      132,
      81,
      186,
      14,
      97,
      243,
      252,
      67,
      94,
      120,
      67,
      102,
      108,
      241,
      119,
      60,
      95,
      151,
      133,
      222,
      118,
      252,
      154,
      56,
      53,
      155,
      232,
      122,
      9,
      98,
      33,
      110,
      155,
      69,
      54,
      118,
      94,
      219,
      107,
      210,
      87,
      135,
      168,
      68,
      111,
      37,
      0,
      94,
      242,
      113,
      22,
      141,
      117,
      56,
      25,
      119,
      151,
      228,
      207,
      136,
      12,
      131,
      173,
      101,
      110,
      237,
      64,
      108,
      203,
      141,
      159,
      12,
      217,
      75,
      93,
      28,
      146,
      104,
      105,
      4,
      61,
      34,
      58,
      56,
      6,
      129,
      50,
      197,
      99,
      168,
      76,
      78,
      148,
      165,
      144,
      39,
      181,
      125,
      91,
      216,
      245,
      122,
      39,
      28,
      207,
      153,
      173,
      247,
      133,
      243,
      149,
      182,
      18,
      45,
      220,
      194,
      130,
      201,
      95,
      163,
    ],
    "privateExponent": Uint8Array [
      0,
      170,
      199,
      184,
      152,
      228,
      224,
      183,
      25,
      247,
      165,
      225,
      89,
      247,
      238,
      205,
      253,
      126,
      103,
      140,
      254,
      117,
      85,
      118,
      232,
      59,
      244,
      84,
      228,
      192,
      249,
      142,
      133,
      202,
      171,
      170,
      83,
      90,
      218,
      196,
      73,
      144,
      66,
      241,
      5,
      133,
      102,
      147,
      194,
      6,
      75,
      58,
      120,
      162,
      101,
      243,
      70,
      78,
      41,
      149,
      206,
      137,
      204,
      9,
      81,
      131,
      190,
      76,
      42,
      50,
      185,
      92,
      79,
      65,
      189,
      201,
      179,
      51,
      13,
      140,
      50,
      56,
      6,
      57,
      44,
      51,
      248,
      66,
      83,
      220,
      249,
      146,
      184,
      91,
      3,
      1,
      121,
      133,
      33,
      66,
      255,
      137,
      90,
      200,
      25,
      131,
      197,
      210,
      222,
      133,
      236,
      191,
      6,
      58,
      13,
      244,
      246,
      163,
      243,
      241,
      84,
      220,
      97,
      210,
      220,
      237,
      3,
      251,
      210,
      206,
      234,
      8,
      187,
      153,
      85,
      69,
      33,
      70,
      150,
      16,
      166,
      254,
      116,
      76,
      99,
      240,
      103,
      7,
      84,
      216,
      251,
      227,
      127,
      173,
      114,
      116,
      31,
      147,
      236,
      93,
      50,
      7,
      191,
      181,
      242,
      9,
      228,
      59,
      103,
      107,
      248,
      246,
      25,
      239,
      181,
      58,
      64,
      208,
      37,
      196,
      51,
      128,
      134,
      211,
      129,
      137,
      196,
      221,
      136,
      8,
      247,
      206,
      190,
      34,
      46,
      64,
      54,
      52,
      172,
      134,
      207,
      171,
      10,
      46,
      138,
      10,
      91,
      61,
      83,
      57,
      240,
      208,
      81,
      163,
      231,
      46,
      210,
      231,
      34,
      125,
      22,
      250,
      130,
      176,
      234,
      125,
      23,
      79,
      3,
      215,
      57,
      173,
      112,
      22,
      90,
      133,
      211,
      237,
      34,
      161,
      227,
      125,
      43,
      187,
      72,
      114,
      217,
      20,
      136,
      225,
      145,
      199,
      212,
      151,
      10,
      148,
      205,
    ],
    "publicExponent": Uint8Array [
      1,
      0,
      1,
    ],
  },
}
`;

exports[`decomposePrivateKey should decompose with multiple formats 1`] = `
Object {
  "encryptionAlgorithm": null,
  "format": "pkcs1-pem",
  "keyAlgorithm": Object {
    "id": "rsa-encryption",
  },
  "keyData": Object {
    "coefficient": Uint8Array [
      0,
      170,
      199,
      104,
      188,
      117,
      173,
      52,
      144,
      63,
      144,
      98,
      53,
      2,
      58,
      228,
      64,
      250,
      103,
      240,
      144,
      105,
      3,
      40,
      135,
      158,
      150,
      207,
      159,
      216,
      27,
      64,
      148,
      71,
      251,
      10,
      164,
      132,
      106,
      130,
      233,
      255,
      95,
      101,
      223,
      109,
      213,
      181,
      75,
      114,
      230,
      248,
      74,
      208,
      107,
      43,
      58,
      54,
      247,
      89,
      39,
      130,
      137,
      39,
      251,
      51,
      254,
      191,
      65,
      164,
      42,
      69,
      123,
      25,
      155,
      77,
      151,
      109,
      147,
      91,
      42,
      12,
      20,
      17,
      100,
      140,
      172,
      33,
      197,
      112,
      249,
      35,
      164,
      47,
      139,
      9,
      222,
      101,
      255,
      165,
      3,
      240,
      84,
      113,
      151,
      170,
      173,
      154,
      44,
      194,
      239,
      28,
      167,
      112,
      120,
      223,
      169,
      103,
      60,
      179,
      209,
      83,
      77,
      226,
      120,
      233,
      124,
      170,
      132,
    ],
    "exponent1": Uint8Array [
      0,
      193,
      179,
      115,
      178,
      210,
      57,
      129,
      167,
      176,
      187,
      133,
      3,
      34,
      13,
      135,
      186,
      221,
      227,
      99,
      222,
      75,
      221,
      198,
      216,
      66,
      213,
      109,
      212,
      217,
      37,
      45,
      89,
      152,
      117,
      225,
      107,
      150,
      117,
      182,
      67,
      47,
      33,
      252,
      209,
      95,
      219,
      158,
      108,
      157,
      40,
      101,
      73,
      100,
      2,
      229,
      183,
      198,
      103,
      109,
      220,
      220,
      132,
      46,
      229,
      208,
      9,
      100,
      57,
      170,
      9,
      219,
      131,
      103,
      109,
      255,
      167,
      169,
      139,
      219,
      42,
      114,
      234,
      177,
      152,
      163,
      68,
      183,
      59,
      204,
      112,
      134,
      163,
      6,
      60,
      224,
      171,
      71,
      33,
      224,
      74,
      181,
      223,
      20,
      94,
      234,
      25,
      251,
      31,
      25,
      90,
      142,
      19,
      128,
      190,
      16,
      52,
      65,
      98,
      113,
      70,
      86,
      32,
      70,
      63,
      132,
      117,
      128,
      241,
    ],
    "exponent2": Uint8Array [
      0,
      180,
      120,
      105,
      246,
      141,
      188,
      114,
      57,
      198,
      117,
      209,
      39,
      16,
      66,
      152,
      233,
      94,
      177,
      91,
      21,
      0,
      120,
      223,
      43,
      162,
      64,
      238,
      99,
      110,
      64,
      241,
      111,
      177,
      33,
      204,
      110,
      122,
      180,
      143,
      136,
      97,
      200,
      152,
      120,
      86,
      0,
      143,
      63,
      151,
      9,
      17,
      238,
      53,
      34,
      5,
      116,
      146,
      251,
      39,
      151,
      159,
      222,
      164,
      207,
      125,
      97,
      190,
      63,
      207,
      207,
      158,
      74,
      49,
      164,
      182,
      65,
      35,
      111,
      237,
      136,
      108,
      146,
      170,
      80,
      236,
      126,
      48,
      86,
      102,
      198,
      61,
      0,
      253,
      148,
      129,
      210,
      71,
      203,
      190,
      42,
      29,
      199,
      131,
      220,
      17,
      20,
      125,
      248,
      102,
      54,
      240,
      40,
      102,
      152,
      30,
      177,
      179,
      68,
      150,
      218,
      92,
      8,
      14,
      18,
      22,
      14,
      117,
      93,
    ],
    "modulus": Uint8Array [
      0,
      194,
      250,
      205,
      58,
      165,
      170,
      198,
      108,
      132,
      70,
      32,
      244,
      220,
      102,
      212,
      211,
      182,
      102,
      221,
      92,
      143,
      254,
      142,
      94,
      186,
      81,
      219,
      104,
      151,
      186,
      173,
      29,
      22,
      70,
      21,
      137,
      53,
      53,
      141,
      124,
      65,
      10,
      223,
      190,
      189,
      25,
      187,
      176,
      101,
      6,
      210,
      129,
      138,
      77,
      98,
      25,
      225,
      174,
      183,
      168,
      232,
      197,
      161,
      202,
      150,
      35,
      171,
      18,
      93,
      82,
      88,
      16,
      94,
      8,
      109,
      36,
      97,
      144,
      76,
      144,
      35,
      110,
      7,
      208,
      182,
      231,
      53,
      185,
      253,
      18,
      105,
      168,
      168,
      251,
      231,
      89,
      97,
      38,
      41,
      133,
      249,
      175,
      189,
      168,
      171,
      109,
      133,
      7,
      164,
      155,
      206,
      231,
      47,
      196,
      197,
      85,
      217,
      74,
      220,
      155,
      98,
      44,
      163,
      97,
      64,
      136,
      10,
      216,
      240,
      175,
      248,
      31,
      186,
      255,
      190,
      81,
      225,
      48,
      142,
      10,
      74,
      22,
      18,
      19,
      191,
      108,
      134,
      53,
      70,
      76,
      26,
      145,
      229,
      233,
      93,
      65,
      117,
      88,
      211,
      232,
      42,
      102,
      96,
      227,
      136,
      29,
      135,
      235,
      68,
      115,
      204,
      50,
      43,
      22,
      3,
      206,
      227,
      208,
      250,
      58,
      245,
      1,
      132,
      91,
      216,
      149,
      12,
      84,
      168,
      165,
      211,
      115,
      126,
      167,
      205,
      177,
      196,
      6,
      139,
      25,
      136,
      50,
      251,
      151,
      76,
      246,
      77,
      51,
      110,
      225,
      16,
      87,
      247,
      49,
      206,
      220,
      7,
      203,
      110,
      34,
      88,
      243,
      85,
      107,
      63,
      44,
      252,
      92,
      47,
      20,
      32,
      113,
      212,
      147,
      227,
      192,
      116,
      137,
      248,
      241,
      77,
      242,
      17,
      42,
      157,
      240,
      162,
      210,
      82,
      80,
      233,
      1,
      97,
      59,
      85,
      121,
    ],
    "prime1": Uint8Array [
      0,
      234,
      197,
      149,
      114,
      192,
      177,
      89,
      226,
      81,
      36,
      244,
      171,
      58,
      249,
      165,
      54,
      232,
      120,
      154,
      138,
      43,
      21,
      105,
      150,
      95,
      150,
      45,
      224,
      191,
      120,
      73,
      4,
      156,
      69,
      130,
      163,
      168,
      189,
      189,
      136,
      106,
      58,
      40,
      80,
      188,
      19,
      59,
      138,
      144,
      181,
      53,
      37,
      206,
      74,
      52,
      197,
      235,
      42,
      44,
      240,
      201,
      12,
      54,
      72,
      241,
      106,
      8,
      147,
      6,
      48,
      187,
      236,
      197,
      241,
      144,
      172,
      77,
      14,
      38,
      92,
      26,
      156,
      230,
      192,
      187,
      178,
      181,
      70,
      51,
      87,
      120,
      11,
      69,
      167,
      6,
      131,
      235,
      78,
      121,
      163,
      195,
      191,
      169,
      7,
      77,
      127,
      82,
      243,
      201,
      148,
      178,
      59,
      136,
      217,
      240,
      142,
      204,
      65,
      137,
      125,
      209,
      191,
      94,
      11,
      47,
      162,
      24,
      51,
    ],
    "prime2": Uint8Array [
      0,
      212,
      156,
      31,
      177,
      83,
      95,
      21,
      57,
      132,
      81,
      186,
      14,
      97,
      243,
      252,
      67,
      94,
      120,
      67,
      102,
      108,
      241,
      119,
      60,
      95,
      151,
      133,
      222,
      118,
      252,
      154,
      56,
      53,
      155,
      232,
      122,
      9,
      98,
      33,
      110,
      155,
      69,
      54,
      118,
      94,
      219,
      107,
      210,
      87,
      135,
      168,
      68,
      111,
      37,
      0,
      94,
      242,
      113,
      22,
      141,
      117,
      56,
      25,
      119,
      151,
      228,
      207,
      136,
      12,
      131,
      173,
      101,
      110,
      237,
      64,
      108,
      203,
      141,
      159,
      12,
      217,
      75,
      93,
      28,
      146,
      104,
      105,
      4,
      61,
      34,
      58,
      56,
      6,
      129,
      50,
      197,
      99,
      168,
      76,
      78,
      148,
      165,
      144,
      39,
      181,
      125,
      91,
      216,
      245,
      122,
      39,
      28,
      207,
      153,
      173,
      247,
      133,
      243,
      149,
      182,
      18,
      45,
      220,
      194,
      130,
      201,
      95,
      163,
    ],
    "privateExponent": Uint8Array [
      0,
      170,
      199,
      184,
      152,
      228,
      224,
      183,
      25,
      247,
      165,
      225,
      89,
      247,
      238,
      205,
      253,
      126,
      103,
      140,
      254,
      117,
      85,
      118,
      232,
      59,
      244,
      84,
      228,
      192,
      249,
      142,
      133,
      202,
      171,
      170,
      83,
      90,
      218,
      196,
      73,
      144,
      66,
      241,
      5,
      133,
      102,
      147,
      194,
      6,
      75,
      58,
      120,
      162,
      101,
      243,
      70,
      78,
      41,
      149,
      206,
      137,
      204,
      9,
      81,
      131,
      190,
      76,
      42,
      50,
      185,
      92,
      79,
      65,
      189,
      201,
      179,
      51,
      13,
      140,
      50,
      56,
      6,
      57,
      44,
      51,
      248,
      66,
      83,
      220,
      249,
      146,
      184,
      91,
      3,
      1,
      121,
      133,
      33,
      66,
      255,
      137,
      90,
      200,
      25,
      131,
      197,
      210,
      222,
      133,
      236,
      191,
      6,
      58,
      13,
      244,
      246,
      163,
      243,
      241,
      84,
      220,
      97,
      210,
      220,
      237,
      3,
      251,
      210,
      206,
      234,
      8,
      187,
      153,
      85,
      69,
      33,
      70,
      150,
      16,
      166,
      254,
      116,
      76,
      99,
      240,
      103,
      7,
      84,
      216,
      251,
      227,
      127,
      173,
      114,
      116,
      31,
      147,
      236,
      93,
      50,
      7,
      191,
      181,
      242,
      9,
      228,
      59,
      103,
      107,
      248,
      246,
      25,
      239,
      181,
      58,
      64,
      208,
      37,
      196,
      51,
      128,
      134,
      211,
      129,
      137,
      196,
      221,
      136,
      8,
      247,
      206,
      190,
      34,
      46,
      64,
      54,
      52,
      172,
      134,
      207,
      171,
      10,
      46,
      138,
      10,
      91,
      61,
      83,
      57,
      240,
      208,
      81,
      163,
      231,
      46,
      210,
      231,
      34,
      125,
      22,
      250,
      130,
      176,
      234,
      125,
      23,
      79,
      3,
      215,
      57,
      173,
      112,
      22,
      90,
      133,
      211,
      237,
      34,
      161,
      227,
      125,
      43,
      187,
      72,
      114,
      217,
      20,
      136,
      225,
      145,
      199,
      212,
      151,
      10,
      148,
      205,
    ],
    "publicExponent": Uint8Array [
      1,
      0,
      1,
    ],
  },
}
`;

exports[`decomposePublicKey should decompose with a single format 1`] = `
Object {
  "format": "spki-pem",
  "keyAlgorithm": Object {
    "id": "rsa-encryption",
  },
  "keyData": Object {
    "modulus": Uint8Array [
      0,
      166,
      53,
      131,
      232,
      151,
      254,
      22,
      219,
      180,
      187,
      248,
      106,
      17,
      27,
      154,
      231,
      54,
      49,
      36,
      22,
      10,
      198,
      20,
      164,
      30,
      244,
      55,
      252,
      5,
      253,
      91,
      131,
      90,
      129,
      232,
      148,
      26,
      193,
      236,
      165,
      71,
      201,
      95,
      139,
      165,
      207,
      106,
      0,
      89,
      83,
      231,
      68,
      86,
      202,
      67,
      242,
      193,
      62,
      0,
      101,
      111,
      4,
      4,
      197,
      136,
      152,
      220,
      168,
      57,
      214,
      225,
      203,
      42,
      253,
      214,
      225,
      142,
      179,
      82,
      91,
      227,
      242,
      13,
      96,
      98,
      232,
      120,
      169,
      74,
      249,
      197,
      192,
      205,
      62,
      17,
      16,
      110,
      162,
      125,
      134,
      42,
      65,
      235,
      199,
      202,
      41,
      193,
      216,
      79,
      100,
      159,
      69,
      241,
      45,
      222,
      131,
      197,
      102,
      222,
      131,
      59,
      53,
      178,
      219,
      77,
      171,
      215,
      148,
      229,
      144,
      181,
      19,
      37,
      50,
      142,
      193,
      34,
      125,
      168,
      105,
      124,
      205,
      161,
      248,
      237,
      32,
      202,
      94,
      83,
      170,
      95,
      67,
      147,
      177,
      80,
      30,
      57,
      208,
      36,
      47,
      199,
      13,
      173,
      241,
      116,
      71,
      78,
      196,
      191,
      155,
      252,
      169,
      45,
      103,
      252,
      95,
      115,
      168,
      150,
      162,
      222,
      90,
      59,
      204,
      249,
      122,
      79,
      65,
      147,
      255,
      57,
      159,
      18,
      15,
      215,
      26,
      167,
      253,
      146,
      210,
      25,
      66,
      88,
      127,
      80,
      8,
      218,
      207,
      54,
      29,
      81,
      62,
      87,
      148,
      139,
      188,
      114,
      54,
      229,
      199,
      62,
      227,
      63,
      169,
      42,
      0,
      93,
      168,
      174,
      255,
      38,
      147,
      1,
      41,
      44,
      83,
      215,
      89,
      81,
      49,
      60,
      228,
      54,
      249,
      107,
      156,
      177,
      168,
      50,
      231,
      81,
      155,
      171,
      209,
      190,
      213,
    ],
    "publicExponent": Uint8Array [
      1,
      0,
      1,
    ],
  },
}
`;

exports[`decomposePublicKey should decompose with multiple formats 1`] = `
Object {
  "format": "spki-pem",
  "keyAlgorithm": Object {
    "id": "rsa-encryption",
  },
  "keyData": Object {
    "modulus": Uint8Array [
      0,
      166,
      53,
      131,
      232,
      151,
      254,
      22,
      219,
      180,
      187,
      248,
      106,
      17,
      27,
      154,
      231,
      54,
      49,
      36,
      22,
      10,
      198,
      20,
      164,
      30,
      244,
      55,
      252,
      5,
      253,
      91,
      131,
      90,
      129,
      232,
      148,
      26,
      193,
      236,
      165,
      71,
      201,
      95,
      139,
      165,
      207,
      106,
      0,
      89,
      83,
      231,
      68,
      86,
      202,
      67,
      242,
      193,
      62,
      0,
      101,
      111,
      4,
      4,
      197,
      136,
      152,
      220,
      168,
      57,
      214,
      225,
      203,
      42,
      253,
      214,
      225,
      142,
      179,
      82,
      91,
      227,
      242,
      13,
      96,
      98,
      232,
      120,
      169,
      74,
      249,
      197,
      192,
      205,
      62,
      17,
      16,
      110,
      162,
      125,
      134,
      42,
      65,
      235,
      199,
      202,
      41,
      193,
      216,
      79,
      100,
      159,
      69,
      241,
      45,
      222,
      131,
      197,
      102,
      222,
      131,
      59,
      53,
      178,
      219,
      77,
      171,
      215,
      148,
      229,
      144,
      181,
      19,
      37,
      50,
      142,
      193,
      34,
      125,
      168,
      105,
      124,
      205,
      161,
      248,
      237,
      32,
      202,
      94,
      83,
      170,
      95,
      67,
      147,
      177,
      80,
      30,
      57,
      208,
      36,
      47,
      199,
      13,
      173,
      241,
      116,
      71,
      78,
      196,
      191,
      155,
      252,
      169,
      45,
      103,
      252,
      95,
      115,
      168,
      150,
      162,
      222,
      90,
      59,
      204,
      249,
      122,
      79,
      65,
      147,
      255,
      57,
      159,
      18,
      15,
      215,
      26,
      167,
      253,
      146,
      210,
      25,
      66,
      88,
      127,
      80,
      8,
      218,
      207,
      54,
      29,
      81,
      62,
      87,
      148,
      139,
      188,
      114,
      54,
      229,
      199,
      62,
      227,
      63,
      169,
      42,
      0,
      93,
      168,
      174,
      255,
      38,
      147,
      1,
      41,
      44,
      83,
      215,
      89,
      81,
      49,
      60,
      228,
      54,
      249,
      107,
      156,
      177,
      168,
      50,
      231,
      81,
      155,
      171,
      209,
      190,
      213,
    ],
    "publicExponent": Uint8Array [
      1,
      0,
      1,
    ],
  },
}
`;
